Fix affiliate horizontal scrolling when there is imagecode

--- a/themes/experience-engine/assets/styles/components/affiliatemarketing/affiliatemarketing.css
+++ b/themes/experience-engine/assets/styles/components/affiliatemarketing/affiliatemarketing.css
@@ -197,7 +197,6 @@
 		height: auto;
 		@media (--max-medium-viewport) {
 			max-width: 100%;
-			width: 100%;
 		}
 	}
 }
